<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndroidFrame</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="inputUsernameStr">输入用户手机号</string>
    <string name="inputPasswordStr">请输入密码</string>
    <string name="loginBtnStr">登录</string>
    <string name="forgetPasswordStr">忘记密码？</string>
    <string name="registAccount">注册用户</string>
    <string name="hintNothing"></string>
    <string name="getIdentifyingCode">获取验证码</string>
    <string name="comfirmBtnStr">确定</string>
    <string name="registInputIndentifyCode">填写验证码</string>
    <string name="registTitle">注册</string>
    <string name="nextStep">下一步</string>
    <string name="inputNewPassword">请输入新密码</string>
    <string name="inputConfirmPassword">请确认新密码</string>
    <string name="defaultDeviceName">温度</string>
    <string name="defaultDeviceUnit">ug/m3</string>
    <string name="defaultDeviceValue">26.1</string>
    <string name="itemDeviceDefaultName">办公室</string>
    <string name="wifiSettingStr">WIFI设置</string>
    <string name="addDevice">设备添加</string>
    <string name="tv_connect">TV账户关联</string>
    <string name="selfCenterUserLogin">登录</string>
    <string name="deviceRelieve">设备解除</string>
    <string name="helpCenter">帮助中心</string>
    <string name="exit">退出</string>
    <string name="systemVersion">系统版本</string>
    <string name="passwordCanNotNone">密码不能为空</string>
    <string name="passwordMustBeSame">密码不相同</string>
    <string name="networkFail">网络请求失败，请稍后再试</string>
    
</resources>
