<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
   <com.silenoff.frame.widgets.ClearEditText
        android:id="@+id/et_new_password_input_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/input_bg"
        android:drawableRight="@drawable/et_delete_right"
        android:ems="20"
        android:paddingLeft="15dp"
        android:inputType="textPassword"
        android:hint="@string/inputNewPassword"
        android:singleLine="true"
        android:textColorHint="#bfc0c1" />
   <com.silenoff.frame.widgets.ClearEditText
        android:id="@+id/et_new_password_input_number_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_below="@id/et_new_password_input_number"
        android:background="@drawable/input_bg"
        android:drawableRight="@drawable/et_delete_right"
        android:ems="20"
        android:paddingLeft="15dp"
        android:inputType="textPassword"
        android:hint="@string/inputConfirmPassword"
        android:singleLine="true"
        android:textColorHint="#bfc0c1" />
   
   <Button
        android:id="@+id/btn_new_password_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_bg"
        android:layout_alignLeft="@+id/et_new_password_input_number_confirm"
        android:layout_below="@+id/et_new_password_input_number_confirm"
        android:layout_marginTop="24dp"
        android:layout_marginRight="30dp"
        android:textColor="#ffffff"
        android:text="@string/comfirmBtnStr" />
   
</RelativeLayout>
