<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <View
        android:id="@+id/fragment_settings_top_view"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/grayTop"
        />

    <TextView
        android:id="@+id/wifi_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginTop="8dp"
        android:layout_below="@id/fragment_settings_top_view"
        android:layout_centerHorizontal="true"
        android:text="@string/wifiSettingStr" />

    <ImageView
        android:id="@+id/wifi_setting_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifi_setting"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/wifi_setting" />

    <View
        android:id="@+id/setting_devide_view1"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@id/wifi_setting_imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:background="@drawable/setting_devide_view1" />

    <TextView
        android:id="@+id/add_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/setting_devide_view1"
        android:layout_marginTop="8dp"
        android:text="@string/addDevice"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/ImageView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/add_device"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/add_device" />

    <View
        android:id="@+id/View01"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ImageView01"
        android:layout_marginTop="3dp"
        android:background="@drawable/setting_devide_view1" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/View01"
        android:layout_marginTop="8dp"
        android:text="@string/tv_connect"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/ImageView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/TextView01"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/tv_connect" />

</RelativeLayout>