<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/self_center_user_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/user_logo" />

    <TextView
        android:id="@+id/self_center_user_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/self_center_user_logo"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:text="@string/selfCenterUserLogin" />
    
    <LinearLayout
        android:id="@+id/relieveDeviceLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/self_center_user_login"
        android:layout_marginTop="25dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/relieve_device_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/relieve_device"
            />
        <TextView
            android:id="@+id/relieve_device_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/deviceRelieve"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/right_arrow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160dp"
            android:background="@drawable/right_arrow"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:id="@+id/relieve_devide_view1"
        android:layout_width="wrap_content"
        android:layout_height="1dip"
        android:layout_below="@id/relieveDeviceLinearLayout"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@+id/textViewBiaoding"
        android:background="@color/grayDevideLine" />

    <TextView
        android:id="@+id/textViewBiaoding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="0dp" />
    <LinearLayout
        android:id="@+id/helpCenterLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/relieve_devide_view1"
        android:layout_marginTop="10dp"
        >
        <ImageView
            android:id="@+id/help_center_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/help_phone"
            />
        <TextView
            android:id="@+id/help_center_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/helpCenter"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/right_arrow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160dp"
            android:background="@drawable/right_arrow"
            android:textSize="20sp" />
    </LinearLayout>
    <View
        android:id="@+id/relieve_devide_view2"
        android:layout_width="wrap_content"
        android:layout_height="1dip"
        android:layout_below="@id/helpCenterLinearLayout"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@+id/textViewBiaoding"
        android:background="@color/grayDevideLine" />
    <LinearLayout
        android:id="@+id/systemVersionLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/relieve_devide_view2"
        android:layout_marginTop="10dp"
        >

        <ImageView
            android:id="@+id/system_version_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/system_version" />

        <TextView
            android:id="@+id/system_version_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/systemVersion"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/right_arrow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="160dp"
            android:background="@drawable/right_arrow"
            android:textSize="20sp" />
    </LinearLayout>
    <View
        android:id="@+id/relieve_devide_view3"
        android:layout_width="wrap_content"
        android:layout_height="1dip"
        android:layout_below="@id/systemVersionLinearLayout"
        android:layout_marginTop="16dp"
        android:layout_toRightOf="@+id/textViewBiaoding"
        android:background="@color/grayDevideLine" />

    <Button
        android:id="@+id/user_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_below="@id/relieve_devide_view3"
        android:background="@drawable/login_bg"
        android:text="@string/exit"
        android:layout_marginLeft="60dp"
        android:textColor="#ffffff" />

</RelativeLayout>
